google analytics script tag added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <div id="root"></div>
     <script type="module" src="/index.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1" type="module"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9SLZK6K9YP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9SLZK6K9YP');
+    </script>
   </body>
 </html>
